# LUATOS_NG

./: .gitignore  CMakeLists.txt  LuatOS-SoC_V1008_ESP32S3.soc  LuatOS-SoC_V1008_FT6636_ESP32S3.soc  README.md  makesoc - 副本.py  makesoc.py  partitions.16m555.csv  partitions.16m844.csv  sdkconfig  sdkconfig.old
LuatOS/components/camera/: luat_camera.h
LuatOS/components/common/: c_common.c  c_common.h
LuatOS/components/fskv/: luat_fskv.h
LuatOS/components/ft6336/: ft6336u_driver.c  ft6336u_driver.h  ft6336u_lvgl.c  lua_lib_ft6336.c
LuatOS/components/ft6636/: ft6336u_driver.h  lua_lib_ft6636.c
LuatOS/components/io_queue/: luat_lib_io_queue.c  luat_lib_io_queue.h
LuatOS/components/lcd/: CMakeLists.txt  luat_lcd.h  luat_lcd_custom.c  luat_lcd_gc9106l.c  luat_lcd_gc9a01.c  luat_lcd_h050iwv.c  luat_lcd_ili9341.c  luat_lcd_sh8601z.c  luat_lcd_st7735.c  luat_lcd_st7789.c  luat_lib_lcd.c
LuatOS/components/lcd_panel/: CMakeLists.txt  lua_lib_qlcd.c  qlcd.c  qlcd.h
LuatOS/components/little_flash/: luat_lib_little_flash.c  luat_little_flash_lfs2.c
LuatOS/components/mobile/: luat_mobile.h  luat_mobile_common.c
LuatOS/components/multimedia/: luat_lib_multimedia_audio.c  mp3_decode_port.c
LuatOS/components/sfud/: luat_lib_sfud.c  sfud.c  sfud_cfg.h  sfud_def.h  sfud_flash_def.h  sfud_port.c
LuatOS/components/tiny_jpeg/: tiny_jpeg.c
LuatOS/components/tp/: luat_tp_ft3x68.c
components/luat/: CMakeLists.txt
docs/: ft6336_qlcd_lua.md  ledc_pwm.md  lvgl.md  new_component.md  readme.md
include/: luat_conf_bsp self.h  luat_conf_bsp.h
pack/: info.json
(+88 files in other folders)
